<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <ImageView
            android:src="@drawable/me"

            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_height="200dp" />


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/my_name"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:background="@color/secondary_colorText"
            android:layout_marginTop="16dp"
            android:layout_height="1dp">

        </View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_margin="16dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/track"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/track_value"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_margin="16dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/country"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/country_value"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_margin="16dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/email_value"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_margin="16dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/phone_number"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/phone_number_value"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/slack_username"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/slack_username_value"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>